# Easy-VSC-CMake

./: CMakeLists.txt  Generator.bat  LICENSE  README.md
Cooperate_DLL/: CMakeLists.txt
Cooperate_DLL/ColorDealing/: CMakeLists.txt  ColorCommonDefine.h  ColorInterface.cpp
Cooperate_DLL/ScriptDealing/: CMakeLists.txt  ScriptInterface.cpp
Cooperate_EXE/: CMakeLists.txt
Cooperate_EXE/include/: ColorInterface.h  ScriptInterface.h
Cooperate_EXE/src/: main.cpp
Seperate_EXE/: CMakeLists.txt  CommonTool.cpp  CommonTool.h  main.cpp
